crates/serde-kdl/tests/snapshots/smoke_ser__human bytes.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(Bytes::new(b\"KDL\"))?"

---
- "S0RM"
