crates/serde-kdl/tests/snapshots/smoke_ser__human newtype variant.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(&Enum::Newtype(0))?"

---
(Newtype)- 0
