crates/serde-kdl/tests/snapshots/smoke_ser__human object map.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string::<ObjectMap>(&[(Struct{field: 1,}, Tuple(2, 3)),\n                         (Struct{field: 4,},\n                          Tuple(5, 6))].into_iter().collect())?"

---

- {
    key field=1
    value 2 3
}
- {
    key field=4
    value 5 6
}

