crates/serde-kdl/tests/snapshots/smoke_ser__human string map.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string::<StringMap>(&[(\"one\", 1), (\"two\", 2)].into_iter().collect())?"

---

- {
    key r"one"
    value 1
}
- {
    key r"two"
    value 2
}

