crates/serde-kdl/tests/snapshots/smoke_ser__human string.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(\"Hello\")?"

---
- r"Hello"
