crates/serde-kdl/tests/snapshots/smoke_ser__human struct variant.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(&Enum::Struct{field: 0,})?"

---
(Struct)- {
    field 0
}
