crates/serde-kdl/tests/snapshots/smoke_ser__human struct.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(&Struct{field: 0,})?"

---

field 0

