crates/serde-kdl/tests/snapshots/smoke_ser__human tuple struct.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(&Tuple(0, 0))?"

---

- 0
- 0

