crates/serde-kdl/tests/snapshots/smoke_ser__human tuple variant.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(&Enum::Tuple(0, 0))?"

---
(Tuple)- {
    - 0
    - 0
}
