crates/serde-kdl/tests/snapshots/smoke_ser__human unit variant.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string(&Enum::Unit)?"

---
(Unit)- null
