crates/serde-kdl/tests/snapshots/smoke_ser__ugly bytes.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string_ugly(Bytes::new(b\"KDL\"))?"

---
- "S0RM"
