crates/serde-kdl/tests/snapshots/smoke_ser__ugly char.snap
---
source: crates/serde-kdl/tests/smoke_ser.rs
expression: "to_string_ugly(&'🦀')?"

---
- r"🦀"
